tests/baselines/reference/nonPrimitiveAndTypeVariables.errors.txt
tests/cases/conformance/types/nonPrimitive/nonPrimitiveAndTypeVariables.ts(10,9): error TS2322: Type 'T' is not assignable to type 'object'.
tests/cases/conformance/types/nonPrimitive/nonPrimitiveAndTypeVariables.ts(11,9): error TS2322: Type 'T' is not assignable to type 'object | U'.
  Type 'T' is not assignable to type 'U'.
    'T' is assignable to the constraint of type 'U', but 'U' could be instantiated with a different subtype of constraint '{}'.


==== tests/cases/conformance/types/nonPrimitive/nonPrimitiveAndTypeVariables.ts (2 errors) ====
    // Repros from #23800
    
    type A<T, V> = { [P in keyof T]: T[P] extends V ? 1 : 0; };
    type B<T, V> = { [P in keyof T]: T[P] extends V | object ? 1 : 0; };
    
    let a: A<{ a: 0 | 1 }, 0> = { a: 0 };
    let b: B<{ a: 0 | 1 }, 0> = { a: 0 };
    
    function foo<T, U>(x: T) {
        let a: object = x;  // Error
            ~
!!! error TS2322: Type '{|T|0|}' is not assignable to type 'object'.
!!! annotated symbol 0 tests/cases/conformance/types/nonPrimitive/nonPrimitiveAndTypeVariables.ts:9:14
        let b: U | object = x;  // Error
            ~
!!! error TS2322: Type '{|T|0|}' is not assignable to type 'object | {|U|1|}'.
!!! error TS2322:   Type '{|T|2|}' is not assignable to type '{|U|3|}'.
!!! error TS2322:     '{|T|4|}' is assignable to the constraint of type '{|U|5|}', but '{|U|6|}' could be instantiated with a different subtype of constraint '{}'.
!!! annotated symbol 0 tests/cases/conformance/types/nonPrimitive/nonPrimitiveAndTypeVariables.ts:9:14
!!! annotated symbol 1 tests/cases/conformance/types/nonPrimitive/nonPrimitiveAndTypeVariables.ts:9:17
!!! annotated symbol 2 tests/cases/conformance/types/nonPrimitive/nonPrimitiveAndTypeVariables.ts:9:14
!!! annotated symbol 3 tests/cases/conformance/types/nonPrimitive/nonPrimitiveAndTypeVariables.ts:9:17
!!! annotated symbol 4 tests/cases/conformance/types/nonPrimitive/nonPrimitiveAndTypeVariables.ts:9:14
!!! annotated symbol 5 tests/cases/conformance/types/nonPrimitive/nonPrimitiveAndTypeVariables.ts:9:17
!!! annotated symbol 6 tests/cases/conformance/types/nonPrimitive/nonPrimitiveAndTypeVariables.ts:9:17
    }
    